# VisualServoing_Kinect

./: LICENSE  README.md  kinect_sdk_install.bash  rviz.bash  setup.bash
OilPan/: PerformPoseReg_OnTheFront.ipynb  PerformPoseReg_OnTheSide.ipynb  TranslateTheCloudsToTheCenter.ipynb  TurnThemIntoPointClouds.ipynb
OilPan/Blender/: FrontView.blend
OilPan/CenteredPointClouds/: oil_pan_front_pc_10000.ply  oil_pan_full_pc_10000.ply
OilPan/Models/: OilPanFrontView.stl  OilPanSideView1.stl
OilPan/PointClouds/: oil_pan_sv_pc_10000.ply
OilPan/TransformedPointClouds/Sources/: transformed_front.ply  transformed_side.ply
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/azure_kinect_ros2_driver/lib/azure_kinect_ros2_driver/: azure_kinect_node
ros2_ws/install/azure_kinect_ros2_driver/share/azure_kinect_ros2_driver/: package.sh
ros2_ws/install/d435i_xarm_setup/lib/d435i_xarm_setup/: findobj_grasp_moveit_planner  findobj_grasp_xarm_api  tf_object_to_base
ros2_ws/install/d435i_xarm_setup/share/d435i_xarm_setup/: package.sh
ros2_ws/install/mbot_demo/share/mbot_demo/: local_setup.sh  package.sh
ros2_ws/install/pose_estimation/lib/pose_estimation/: image_segmentation  point_cloud_generator  point_cloud_visualizer  pose_estimator
ros2_ws/log/: latest_build
ros2_ws/src/pose_estimation/: README.md  package.xml  setup.py
ros2_ws/src/pose_estimation/config/: segmentation_point_cloud_config.yaml
ros2_ws/src/pose_estimation/pose_estimation/: point_cloud_generator.py  pruebas.txt
(+38 files in other folders)
